2006-11-24  Stefan Monnier  <monnier@iro.umontreal.ca>

	* pgg-pgp.el (pgg-pgp-process-region): Change `args' from a list of
	strings to a single string.  Quote `errors-file-name'.
	(pgg-pgp-encrypt-region, pgg-pgp-decrypt-region, pgg-pgp-sign-region)
	(pgg-pgp-verify-region, pgg-pgp-insert-key, pgg-pgp-snarf-keys-region):
	Adjust calls.  Use `shell-quote-argument'.

2006-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* gnus-agent.el (gnus-agent-expire-unagentized-dirs)
	(gnus-agent-regenerate-group): Fix space/tab mixup in messages.

	* gnus-art.el (gnus-article-x-face-command, gnus-numeric-save-name):
	* gnus-group.el (gnus-group-sort-function, gnus-group-line-format)
	(gnus-group-mode, gnus-group-read-group, gnus-group-delete-group)
	(gnus-group-make-directory-group, gnus-group-transpose-groups):
	* gnus-start.el (gnus-options-subscribe, gnus-options-not-subscribe)
	(gnus-subscribe-newsgroup, gnus-1):
	* gnus-sum.el (gnus-summary-make-false-root, gnus-make-threads):
	* gnus.el (gnus-nntp-server, gnus-use-cross-reference)
	(gnus-valid-select-methods, total-expire, gnus-summary-line-format)
	(gnus-group-read-only-p): Fix space/tab mixup in docstrings.

2006-11-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-limit-to-headers): New command and
	keystroke. 
	(gnus-summary-limit-to-bodies): Implement headersp.

2006-11-23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dns.el (query-dns): Protect against "Process dns deleted" strings. 

2006-11-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-string-to-multibyte): Alias to identity in XEmacs.

2006-11-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-generate-hashcash): Expand range of values to
	include `opportunistic'.
	(message-send-mail): Use it.

2006-11-18  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* mm-uu.el (mm-uu-pgp-signed-extract-1): Make last fix more thorough
	and comment it.

	* nnslashdot.el (nnslashdot-retrieve-headers-1): Update regexp.
